baml_language/crates/baml_tests/snapshots/namespaces_root_fallback/baml_tests__namespaces_root_fallback__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Config {
  key: string
}
class user.llm.Response {
  text: string
}
function user.llm.UseConfig(cfg: user.llm.Config) -> user.llm.Response  [expr] {
  {  } user.llm.Response { text: cfg.key }
}
