baml_language/crates/baml_tests/snapshots/namespaces_root_fallback/baml_tests__namespaces_root_fallback__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.llm.UseConfig(cfg: Config) -> llm.Response {
    // Locals:
    let _0: llm.Response // _0 // return
    let _1: Config // cfg // param
    let _2: string

    bb0: {
        _2 = copy _1.0;
        _0 = Response { copy _2 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
