baml_language/crates/baml_tests/snapshots/namespaces_root_fallback/baml_tests__namespaces_root_fallback__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Config {
  key: string
}
class user.llm.Response {
  text: string
}
function user.llm.UseConfig(cfg: user.Config) -> user.llm.Response throws never {
  { : user.llm.Response
    Response { text: cfg.key } : user.llm.Response
  }
}
