baml_language/crates/baml_tests/snapshots/namespaces_root_fallback/baml_tests__namespaces_root_fallback__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.llm.UseConfig(cfg: Config) -> void {
    alloc_instance Response
    copy 0
    load_var cfg
    load_field .key
    store_field .text
    return
}
